dataset1235/2025-2/2947369575/users/126276963/executions/1003782500_3691284457.log
== SUBMISSION (2025-08-27 23:24:11)
-- CODE: 
nota1=float(input())
nota2=float(input())
nota3=float(input())
nota4=float(input())
media_ponderada=(nota1*1+nota2*2+nota3*3+nota4*4/(1+2+3+4))
print(round(media_ponderada,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
31.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
156.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:27:04)
-- CODE: 
nota1 =float(input())
nota2 =float(input())
nota3 =float(input())
nota4 =float(input())
media_ponderada=((nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) / (1+2+3+4))
print(round(media_ponderada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:25:03)
-- CODE: 
nota1=float(input())
nota2=float(input())
nota3=float(input())
nota4=float(input())
media_ponderada=(nota1*1+nota2*2+nota3*3+nota4*4/(1+2+3+4))
print(round(media_ponderada,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
47.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
44.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
31.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
156.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:26:37)
-- CODE: 
nota1 =float(input())
nota2 =float(input())
nota3 =float(input())
nota4 =float(input())
media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
print(round(media_ponderada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 5
    media_ponderada=(nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/(1+2+3+4))
                                                                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:27:06)
-- CODE: 
nota1 =float(input())
nota2 =float(input())
nota3 =float(input())
nota4 =float(input())
media_ponderada=((nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) / (1+2+3+4))
print(round(media_ponderada,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
